--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -118,7 +118,8 @@
     @apply border-border outline-ring/50;
   }
   body {
-    @apply bg-background text-foreground;
+    /* @apply bg-background text-foreground; */
+    @apply text-foreground;
   }
 }
 
